# vistools

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  README.zh-CN.md
.claude-plugin/: plugin.json
.github/workflows/: sync-skills.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  parse.rs
crates/cli/src/commands/: diff.rs  inspect.rs  mod.rs  overview.rs  photo.rs  sample.rs  tile.rs  viewport.rs
crates/cli/tests/: integration_test.rs  schema_snapshot_test.rs
crates/core/: Cargo.toml
crates/core/src/: constants.rs  coord.rs  diff.rs  error.rs  geom.rs  guard.rs  inspect.rs  lib.rs  overview.rs  photo.rs  protocol.rs  region.rs  resize.rs  rotate.rs  sample.rs  source.rs  test_support.rs  tile.rs  types.rs  util.rs  viewport.rs
docs/: idea-brief.md  project.md  roadmap.md  status.md  timeline.md
docs/features/phase1-viewport-commands/: PRD.md  changelog.md  contract.md  plan.md
docs/features/phase1-viewport-commands/testing/: contract.md  test-cases.md
docs/features/photography-metering/: PRD.md  acceptance-commands.md  acceptance-fixture-log.md  acceptance-log-template.md  acceptance.md  changelog.md  contract.md  idea-brief.md  plan.md
docs/features/photography-metering/testing/: contract.md  test-cases.md
docs/features/v1-agent-command-surface/: changelog.md  contract.md
skills/vistools/: SKILL.md
