[package]
name = "vistools"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "vistools"
path = "src/main.rs"

[dependencies]
vistools-core = { path = "../core" }
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
tempfile.workspace = true
predicates.workspace = true
