[package]
name = "vistools-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
image.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
